--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   cloud_firestore: ^4.3.2
   cupertino_icons: ^1.0.2
+  double_back_to_close: ^2.0.0
   firebase_auth: ^4.2.6
   firebase_core: ^2.4.1
   flutter:
@@ -21,6 +22,9 @@ dev_dependencies:
   flutter_lints: 2.0.1
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  intl: ^0.18.0
 
 flutter:
   uses-material-design: true
