--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   cloud_firestore: ^4.3.2
   cupertino_icons: ^1.0.2
   double_back_to_close: ^2.0.0
+  dropdown_button2: ^2.0.0
   firebase_auth: ^4.2.6
   firebase_core: ^2.4.1
   flutter:
